v0.2.0-alpha
- Medikamentennamen können Zahlen enthalten
- Absätze und Whitespaces gefixt, Markierungen verbessert
- Overuse inserts optimiert
- Proprocessing für Inserts
- globs in diagnosen
- patches für diagnosen