@@ -5,3 +5,4 @@ v0.2.0-alpha
 - Proprocessing für Inserts
 - globs in diagnosen
 - patches für diagnosen
+- generate letter to employer
